--- a/luawebhook.yaml
+++ b/luawebhook.yaml
@@ -46,6 +46,11 @@ spec:
         name: luawebhook
         ports:
         - containerPort: 5000
+        args:
+        - --script
+        - /app/scripts/plugin.lua
+        - --port
+        - "5000"
         volumeMounts:
         - name: config-volume
           mountPath: /app/scripts
